--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,13 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
+        {
+            "type": "java",
+            "name": "gn2",
+            "request": "launch",
+            "mainClass": "gn2",
+            "projectName": "others_d87277c5"
+        },
         {
             "name": "(gdb) 启动",
             "type": "cppdbg",
@@ -29,6 +35,5 @@
                 }
             ]
         }
-
     ]
 }
