--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,27 @@
     "configurations": [
         {
             "type": "java",
+            "name": "medortool238",
+            "request": "launch",
+            "mainClass": "medortool238",
+            "projectName": "others_d87277c5"
+        },
+        {
+            "type": "java",
+            "name": "medor$tool$238",
+            "request": "launch",
+            "mainClass": "medor$tool$238",
+            "projectName": "others_d87277c5"
+        },
+        {
+            "type": "java",
+            "name": "medor_tool_238",
+            "request": "launch",
+            "mainClass": "medor_tool_238",
+            "projectName": "others_d87277c5"
+        },
+        {
+            "type": "java",
             "name": "count",
             "request": "launch",
             "mainClass": "count",
