--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,20 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    {
+        "type": "java",
+        "name": "Attach",
+        "request": "attach",
+        "hostName": "localhost",
+        "port": "<debug port of the debuggee>"
+    },
+        {
+            "type": "java",
+            "name": "neww",
+            "request": "launch",
+            "mainClass": "neww",
+            "projectName": "others_d87277c5"
+        },
         {
             "type": "java",
             "name": "medortool238",
