--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,63 +1,15 @@
 {
-    // 使用 IntelliSense 了解相关属性。 
-    // 悬停以查看现有属性的描述。
-    // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    {
-        "type": "java",
-        "name": "Attach",
-        "request": "attach",
-        "hostName": "localhost",
-        "port": "<debug port of the debuggee>"
-    },
+
         {
-            "type": "java",
-            "name": "neww",
-            "request": "launch",
-            "mainClass": "neww",
-            "projectName": "others_d87277c5"
-        },
-        {
-            "type": "java",
-            "name": "medortool238",
-            "request": "launch",
-            "mainClass": "medortool238",
-            "projectName": "others_d87277c5"
-        },
-        {
-            "type": "java",
-            "name": "medor$tool$238",
-            "request": "launch",
-            "mainClass": "medor$tool$238",
-            "projectName": "others_d87277c5"
-        },
-        {
-            "type": "java",
-            "name": "medor_tool_238",
-            "request": "launch",
-            "mainClass": "medor_tool_238",
-            "projectName": "others_d87277c5"
-        },
-        {
-            "type": "java",
-            "name": "count",
-            "request": "launch",
-            "mainClass": "count",
-            "projectName": "others_d87277c5"
-        },
-        {
-            "type": "java",
-            "name": "gn2",
-            "request": "launch",
-            "mainClass": "gn2",
-            "projectName": "others_d87277c5"
-        },
-        {
-            "name": "(gdb) 启动",
+            "name": "g++ - Build and debug active file",
             "type": "cppdbg",
             "request": "launch",
-            "program": "输入程序名称，例如 ${workspaceFolder}/a.out",
+            "program": "${fileDirname}/${fileBasenameNoExtension}",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
@@ -66,16 +18,13 @@
             "MIMode": "gdb",
             "setupCommands": [
                 {
-                    "description": "为 gdb 启用整齐打印",
+                    "description": "Enable pretty-printing for gdb",
                     "text": "-enable-pretty-printing",
                     "ignoreFailures": true
-                },
-                {
-                    "description": "将反汇编风格设置为 Intel",
-                    "text": "-gdb-set disassembly-flavor intel",
-                    "ignoreFailures": true
                 }
-            ]
+            ],
+            "preLaunchTask": "C/C++: g++ build active file",
+            "miDebuggerPath": "/usr/bin/gdb"
         }
     ]
 }
